--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -1,7 +1,9 @@
 [/Script/EngineSettings.GeneralProjectSettings]
 ProjectID=D66F970D43A751419B43BC9760FD9906
 ProjectName=Top Down Game Template
+CopyrightNotice=Made by CookieCore
 
 [/Script/TerminSeek.TerminSeekCharacter]
 FixedCameraPitch=-45.0
 FixedCameraDistance=1500.0
+
