Finishing Simple Game

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -2,6 +2,7 @@
 GameDefaultMap=/Game/TopDown/Maps/TopDownMap.TopDownMap
 EditorStartupMap=/Game/TopDown/Maps/TopDownMap.TopDownMap
 GlobalDefaultGameMode="/Script/TerminSeek.TerminSeekGameMode"
+GameInstanceClass=/Game/AADeveloping/BP_GameInstance.BP_GameInstance_C
 
 [/Script/Engine.RendererSettings]
 r.Mobile.ShadingPath=0
